[gd_scene load_steps=5 format=3 uid="uid://byljikrci1p8s"]

[ext_resource type="PackedScene" uid="uid://crstvx1e55xwa" path="res://assets/hammerDude.blend" id="1_ap4h2"]
[ext_resource type="Script" uid="uid://cmsxe5r2sg6c2" path="res://characters/hammer_dude.gd" id="1_pab82"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uqapp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qfx8c"]

[node name="HammerDude" type="CharacterBody3D"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
collision_layer = 4
script = ExtResource("1_pab82")

[node name="hammerDude" parent="." instance=ExtResource("1_ap4h2")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0262739, 0, 0.416755)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1.91, 0, 1.66978e-07, 0, 1.91, 0, -1.66978e-07, 0, -1.91, -0.0262739, 0, 0.416755)
shape = SubResource("CapsuleShape3D_uqapp")

[node name="DamageBox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageBox"]
transform = Transform3D(-2.315, 0, 2.02384e-07, 0, 2.315, 0, -2.02384e-07, 0, -2.315, 0.0125478, -0.617911, -0.208414)
shape = SubResource("CapsuleShape3D_qfx8c")

[node name="JumpCD" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="DamageBox" to="." method="hitPlayer"]
